# liboption

./: README.md  meson.build
.github/workflows/: build_and_test.yml
src/: option.c  option.h
tests/: test_option.c  test_option.cpp
